1.使用cli生成项目代码；2.项目示例改为订单业务。
